--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,4 @@
 python-telegram-bot==13.7
 python-dotenv==0.19.0
+python-telegram-bot==20.3  # Newer version without imghdr dependency
+python-dotenv==0.19.0
